# softwareTalk_FastAPI

./: .gitignore  README.md  index.html  otherAPIs.list  stylesheet.css
database/: halpha_table.sql  little.db  makeDatabases.sh  scanKeep.sh  scanKeepNov.sh  small_table.sql
section_01_bat/: decorators.py  dictionary.py  listOfDictionaries.py  section_01_bat_A.html  section_01_bat_B.html  section_01_bat_C.html  section_01_bat_D.html  section_01_bat_E.html  shallowListOfDictionaries.py  youCanUseBat.sh
section_02_uv/: section_02_uv_A.html  section_02_uv_B.html  sunpyPrintVersion.py
section_03_ruff/: helloWorld.py  installPackages.sh  requirements.in  section_03_ruff_A.html
section_04_fastapi_dict/: demoFastapi.py  installPackages.sh  section_04_fastapi_dict_A.html  section_04_fastapi_dict_B.html  section_04_fastapi_dict_C.html  section_04_fastapi_dict_D.html  section_04_fastapi_dict_E.html
section_05_fastapi_dict_pydantic/: demoFastapi.py  installPackages.sh  requirements.in  section_05_fastapi_dict_pydantic_A.html  section_05_fastapi_dict_pydantic_B.html  section_05_fastapi_dict_pydantic_C.html
section_06_unit_tests_and_git_hooks/: __init__.py  demoFastapi.py  installPackages.sh  preCommitHook.sh  requirements.in  section_06_unit_tests_and_git_hooks_A.html  section_06_unit_tests_and_git_hooks_B.html  startServer.sh  test_demoFastapi.py
section_07_databases_SQL/: DotEnv  demoFastapi.py  (+3 more)
section_13_rust_comparison/Rust/get-whole-database/: Cargo.toml
section_13_rust_comparison/Rust/get-whole-database/src/: DotEnv  db.rs  handlers.rs  main.rs  startServer.sh
(+38 files in other folders)
